# ICT397-Project-Blue

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.orig  CMakeSettings.json  LICENSE  README.md
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/model/: ball.fbx  error.dae  error.gltf  throwingstar.mtl
res/scripts/: InputBindings.lua  LoadResources.lua  TerrainConfig.lua  gameObjsInit.lua  gameObjsReporting.lua  gameObjsTesting.lua  gameobjsSet.lua  luaFunctions.lua
res/shader/: fragshader.fs  playercanvas.vs  skybox_frag.fv  skybox_vert.vs  terrain_frag.fs  terrain_vert.vs  vertshader.vs  water_frag.fs  water_vert.vs
scripts/: InputBindings.lua
src/: CMakeLists.txt  glad.c  main.cpp
src/Controller/: Animator.cpp  Animator.hpp  Enums.hpp  GUIManager.cpp  GUIManager.hpp  InputManager.cpp  InputManager.hpp  PhysicsManager.cpp  PhysicsManager.hpp  ResourceManager.cpp  ResourceManager.hpp  TerrainFactory.cpp  TerrainFactory.hpp  TerrainManager.cpp  TerrainManager.hpp  TextureManager.cpp  TextureManager.hpp
src/Controller/AI/: FSM.hpp  Manager.hpp  Message.hpp
src/Controller/AI/States/: Attack.hpp  Base.hpp  Chase.hpp  Custom.hpp  Die.hpp  Evade.hpp  Flee.hpp  Patrol.hpp  Pursuit.hpp  Revive.hpp  Wander.hpp
src/Controller/AI/States/detail/: Attack.cpp  Chase.cpp  Custom.cpp  Die.cpp  Evade.cpp  Flee.cpp  Patrol.cpp  Pursuit.cpp  Revive.cpp  Wander.cpp
src/Controller/AI/detail/: FSM.cpp  Manager.cpp  Message.cpp
src/Controller/Engine/: BaseState.hpp  BaseState.hpp.orig  CollisionBody.cpp  CollisionBody.hpp  CollisionWorld.cpp  CollisionWorld.hpp  Engine.cpp  Engine.cpp.orig  Engine.hpp  Engine.hpp.orig  EulerCamera.hpp  EventManager.hpp  GameStack.hpp  IDTracker.cpp  IDTracker.hpp  InputManager.cpp  InputManager.hpp  InputManagerDep.cpp  LuaManager.cpp  LuaManager.hpp  Quaternion.cpp  Quaternion.hpp  QuaternionCamera.cpp  QuaternionCamera.hpp  Scalar.hpp  Transform.cpp  Transform.hpp  Vector3.cpp  Vector3.hpp
src/Controller/Factory/: GameAssetFactory.cpp  GameAssetFactory.hpp  TerrainFactory.cpp  TerrainFactory.hpp
src/Controller/Physics/: BeAbstractBody.hpp  BeAbstractCollision.hpp  BeAbstractPhysics.hpp  BeAbstractPhysicsFactory.hpp  BeAbstractPhysicsLibrary.hpp  BeBody.cpp  BeBody.hpp  BeBoxBody.cpp  BeBoxBody.hpp  BeBoxPhysics.cpp  BeBoxPhysics.hpp  BeCapsuleBody.cpp  BeCapsuleBody.hpp  BeCapsulePhysics.cpp  BeCapsulePhysics.hpp  BeCollisionBody.cpp  BeCollisionBody.hpp  BeCollisionWorld.cpp  BeCollisionWorld.hpp  BeConfig.hpp  BeDynamicWorld.cpp  BeDynamicWorld.hpp  BeHeightBody.cpp  BeHeightBody.hpp  BeHeightField.cpp  BeHeightField.hpp  BeHeightPhysics.cpp  BeHeightPhysics.hpp  BeMaterial.cpp  BeMaterial.hpp  BePhysicsLibrary.cpp  BePhysicsLibrary.hpp  BeProxyShape.cpp  BeProxyShape.hpp  BeQuaternion.cpp  BeQuaternion.hpp  BeRP3DFactory.cpp  BeRP3DFactory.hpp  BeScalar.hpp  BeSphereBody.cpp  (+9 more)
src/Controller/PhysicsFacade/: CollisionBody.hpp  CollisionWorld.hpp  DynamicsWorld.hpp  RigidBody.hpp  ShapeFactory.hpp
src/Controller/PhysicsFacade/React/: PhysicsSingleton.hpp  ReactCollisionBody.cpp  ReactCollisionBody.hpp  ReactCollisionShape.cpp  ReactCollisionShape.hpp  ReactCollisionWorld.cpp  ReactCollisionWorld.hpp  ReactDynamicsWorld.cpp  ReactDynamicsWorld.hpp  ReactHelper.cpp  ReactHelper.hpp  ReactMaterial.cpp  ReactMaterial.hpp  ReactRigidBody.cpp  ReactRigidBody.hpp  ReactShapes.cpp  ReactShapes.hpp
src/Engine/: BcQuaternion.cpp  BcQuaternion.hpp  BcVector4.cpp  BcVector4.hpp  Engine.cpp  Engine.hpp  EulerCamera.cpp  GameStack.hpp  InputManager.cpp  InputManager.hpp  OpenGL.hpp  Physic.cpp  Physic.hpp  QuaternionCamera.cpp  QuaternionCamera.hpp
src/Game/: SceneManager.cpp  SceneManager.hpp  SceneManger.cpp
src/Game/MainMenu/: MainMenu.cpp  MainMenu.hpp  StaticModel.cpp  StaticModel.hpp
src/Game/Prototype/: PrototypeScene.cpp  PrototypeScene.cpp.orig  PrototypeScene.hpp  PrototypeScene.hpp.orig
src/Model/: BaseState.hpp  GameState.cpp  GameState.hpp  LuaGuiWrapper.cpp  LuaGuiWrapper.h  PlayerCanvas.cpp  PlayerCanvas.hpp  TerrainModel.cpp  TerrainModel.hpp  TextManager.cpp  TextManager.hpp  Texture.cpp  Texture.hpp  Vertix.hpp  WaterModel.cpp  WaterModel.hpp
src/Model/GameObject/: Base.hpp  Character.hpp  GameAssetFactory.hpp  GameObj_Base.hpp  GameObj_NPC.hpp  GameObj_Player.hpp  GameObj_Static.hpp  GameObject.cpp  GameObject.hpp  GameObject_Base.hpp  Item.hpp  LuaHelper.hpp  Manager.hpp  NPC.hpp  Player.hpp  Static.hpp  Types.hpp
src/Model/GameObject/detail/: Base.cpp  Character.cpp  GameAssetFactory.cpp  GameObj_Base.cpp  GameObj_NPC.cpp  GameObj_Player.cpp  GameObj_Static.cpp  GameObject_Base.cpp  Item.cpp  LuaAssist.cpp  LuaAssist.hpp  LuaHelper.cpp  Manager.cpp  NPC.cpp  Player.cpp  Static.cpp
src/Model/Models/: Animation.hpp  DataTypes.hpp  InputData.cpp  InputData.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp
src/Model/SceneManager_Unused/: Entity.hpp  Entity_Helper.hpp  GameObject_Management.hpp  Scene.hpp
src/Model/Scene_Manager/: Entity.hpp  Entity_Helper.hpp  GameObject.hpp  GameObject_Management.hpp  Scene.hpp
src/Models/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  Modeltest.cpp  Modeltest.hpp  stb_image.h
src/Renderer/: Renderer.cpp  Renderer.hpp
src/View/: BcFloat.cpp  BcFloat.hpp  BcVector3.cpp  BcVector3.hpp  EulerCamera.cpp  EulerCamera.hpp  GLDisplay.cpp  GLDisplay.hpp
src/View/Renderer/: DrawStruct.hpp  OpenGL.cpp  OpenGL.hpp  OpenGLProxy.cpp  OpenGLProxy.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  stb_image.h
src/scripts/: InputBindings.lua
